[gd_scene load_steps=4 format=3 uid="uid://dhkkunmd2772m"]

[ext_resource type="Script" path="res://main.gd" id="1_1lydw"]
[ext_resource type="PackedScene" uid="uid://bjlt846shkqsc" path="res://menuBG.tscn" id="1_f7m5v"]
[ext_resource type="Texture2D" uid="uid://ceewdg5s0cskd" path="res://ilsupremo.jpg" id="3_f01j8"]

[node name="main" type="Node2D"]
script = ExtResource("1_1lydw")

[node name="ParallaxBackground" parent="." instance=ExtResource("1_f7m5v")]
visible = false

[node name="quit" type="Button" parent="."]
offset_left = 448.0
offset_top = 512.0
offset_right = 704.0
offset_bottom = 592.0

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 288.0
offset_top = 136.0
offset_right = 864.0
offset_bottom = 384.0
texture_normal = ExtResource("3_f01j8")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
